*7656* Moved styles from common.less

--- a/pkp-lib/styles/structure/body.less
+++ b/pkp-lib/styles/structure/body.less
@@ -9,10 +9,6 @@
  * @brief Classes for the page structural elements
  */
 
-p {
-	font-size: 90%;
-}
-
 a {
 	color: #569bbe;
 }
@@ -33,11 +29,19 @@ hr {
 	margin-bottom: 10px;
 }
 
-h1, h2, h3, h4, h5, h6, ul, ol,dl, p,blockquote {
+ul, ol,dl, blockquote {
 	padding: 10px;
 }
 
-h1, h2, h3, h4, h5, h6, img {
+p {
+	padding: 0.5em 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	padding-top: 0.5em;
+}
+
+img {
 	padding-bottom: 0px;
 }
 
