*7716* fix background image for error notification

--- a/pkp-lib/styles/controllers/notification.less
+++ b/pkp-lib/styles/controllers/notification.less
@@ -95,7 +95,7 @@ div.ui-pnotify-container {
 	}
 	
 	.notifyError, .notifyFormError {
-		background: #f8dada url(../lib/pkp/templates/images/structure/response_error.png) !important;
+		background: #f8dada url(../lib/pkp/templates/images/structure/response_error.png);
 	}
 	
 	.notifyForbidden {
