--- a/pkp-lib/styles/structure/foot.less
+++ b/pkp-lib/styles/structure/foot.less
@@ -10,19 +10,17 @@
  */
 
 .pkp_structure_foot {
-	height: 315px;
-	background-color: #c1bbaf;
 	clear: both;
-}
-
-.pkp_structure_subfoot {
-	border-top: 1px dotted #fff;
 	background-color: #c1bbaf;
 
-	ul li {
-		list-style: square;
-		margin: 0px 0px 8px 15px;
-		text-transform: uppercase;
-		font-family: "Courier New",Courier,mono;
+	.pkp_structure_foot {
+		border-top: 1px dotted #fff;
+
+		ul li {
+			list-style: square;
+			margin: 0px 0px 8px 15px;
+			text-transform: uppercase;
+			font-family: "Courier New",Courier,mono;
+		}
 	}
 }
