--- a/pkp-lib/styles/structure/foot.less
+++ b/pkp-lib/styles/structure/foot.less
@@ -12,8 +12,12 @@
 .pkp_structure_foot {
 	clear: both;
 	background-color: #c1bbaf;
+	font-color: #ffffff;
+	h4 {
+		color: #ffffff;
+	}
 
-	.pkp_structure_foot {
+	.pkp_structure_subfoot {
 		border-top: 1px dotted #fff;
 
 		ul li {
@@ -21,6 +25,9 @@
 			margin: 0px 0px 8px 15px;
 			text-transform: uppercase;
 			font-family: "Courier New",Courier,mono;
+			a {
+				color: #ffffff;
+			}
 		}
 	}
 }
