*7665* generalize icon for closing modals

--- a/pkp-lib/styles/controllers/modal.less
+++ b/pkp-lib/styles/controllers/modal.less
@@ -30,16 +30,16 @@
 		float: right;
 		padding-right: 10px;
 	}
-
-	.closeIcon {
-		background-image: url(../lib/pkp/templates/images/structure/modal_close_icon.png);
-		height: 23px;
-		width: 23px;
-		background-repeat: no-repeat;
-		display: block;
-		overflow: hidden;
-		text-indent: -99999px;
-	}
+}
+.xIcon {
+	background-image: url(../lib/pkp/templates/images/structure/modal_close_icon.png);
+	height: 23px;
+	width: 23px !important;
+	background-repeat: no-repeat;
+	display: block;
+	overflow: hidden;
+	text-indent: -99999px;
+	border: none !important;
 }
 
 .modal-buttons {
