*7652* Revert footer colour

--- a/pkp-lib/styles/structure/foot.less
+++ b/pkp-lib/styles/structure/foot.less
@@ -12,7 +12,7 @@
 .pkp_structure_foot {
 	clear: both;
 	min-height: 150px;
-	background-color: #c1bbaf;
+	background-color: #A2C6DC;
 	font-color: #ffffff;
 	h4 {
 		color: #000000;
