*7652* Footer content colour

--- a/pkp-lib/styles/structure/foot.less
+++ b/pkp-lib/styles/structure/foot.less
@@ -26,6 +26,7 @@
 			margin: 0px 0px 8px 15px;
 			text-transform: uppercase;
 			font-family: "Courier New",Courier,mono;
+			color: #ffffff;
 			a {
 				color: #ffffff;
 			}
