*7723* Tweak sidebar layout

--- a/pkp-lib/styles/structure/sidebar.less
+++ b/pkp-lib/styles/structure/sidebar.less
@@ -21,7 +21,11 @@
 		padding-top: 10px;
 		padding-bottom: 10px;
 	}
-	
+
+	ul {
+		padding-top: 0px;
+	}
+
 	div.block {
 		border-bottom: 1px dotted #999;
 		
