*7739* Prevent background repeat

--- a/pkp-lib/styles/controllers/grid/files/icons.less
+++ b/pkp-lib/styles/controllers/grid/files/icons.less
@@ -22,6 +22,7 @@
 		background: #FFFAE1 url(../lib/pkp/templates/images/structure/response_warning.png);
 		border-top: 1px solid #ffd324;
 		border-bottom: 1px solid #ffd324;
+		background-repeat: no-repeat;
 	}
 
 	.pkp_controllers_grid_files_error {
