*7655* provide means to let link actions be form field labels

--- a/pkp-lib/styles/form/form.less
+++ b/pkp-lib/styles/form/form.less
@@ -304,7 +304,7 @@
 		.submitFormButton {
 			float: right;
 		}
-		.cancelFormButton {
+		.resetFormButton, .cancelFormButton {
 			float: left
 		}
 		div.clear {
