*7732* CSS, locale changes for reviewer grid refactor

--- a/pkp-lib/styles/controllers/grid/icons.less
+++ b/pkp-lib/styles/controllers/grid/icons.less
@@ -14,7 +14,7 @@
 }
 
 
-a.new {
+a.new, a.unfinished, a.reviewReady {
 	background-image: url(../lib/pkp/templates/images/structure/grid_task.png);
 }
 
@@ -28,10 +28,6 @@ a.declined {
 
 a.completed {
 	background-image: url(../lib/pkp/templates/images/structure/grid_task_complete.png);
-}
-
-a.overdue {
-	background-image: url(../lib/pkp/templates/images/structure/grid_email_overdue.png);
 }
 
 a.uploaded {
