--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -26,6 +26,14 @@ a.sprite {
 	&.notify:before { margin-right:4px; background-position: -24px 0; }
 	&.notify:hover:before { background-position: -24px -24px; }
 
+	&.overdue {
+		text-indent: -1500px;
+		padding-left: 5px;
+	}
+
+	&.overdue:before { margin-right:4px; background-position: -48px 0; }
+	&.overdue:hover:before { background-position: -48px -24px; }
+
 	&.settings:before { background-position: -408px 0; }
 	&.settings:hover:before { background-position: -408px -24px; }
 
