*7660* introduce new modal icons (from Chris)

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -37,6 +37,9 @@ a.sprite {
 	&.settings:before { background-position: -408px 0; }
 	&.settings:hover:before { background-position: -408px -24px; }
 
+	&.upgrade:before { background-position: -168px 0; }
+	&.upgrade:hover:before { background-position: -168px -24px; }
+
 	&.information:before { background-position: -194px 0; }
 	&.information:hover:before { background-position: -194px -24px; }
 
@@ -230,5 +233,8 @@ a.sprite {
 	&.modal_confirm { background-position: -528px -48px; }
 	&.modal_add_item { background-position: -576px -48px; }
 	&.modal_manage { background-position: -624px -48px; }
+	&.modal_settings { background-position: -672px -48px; }
+	&.modal_warning { background-position: -720px -48px; }
+	&.modal_upgrade { background-position: -768px -48px; }
 	&.modal_wizard { background-position: -1632px -48px; }
 }
