Change font to arial

--- a/pkp-lib/styles/structure/body.less
+++ b/pkp-lib/styles/structure/body.less
@@ -81,7 +81,7 @@ h4, .h4 {
 }
 
 body {
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	_text-align: center;
 	color: #333;
 }
