--- a/pkp-lib/styles/structure/foot.less
+++ b/pkp-lib/styles/structure/foot.less
@@ -29,7 +29,13 @@
 			color: #ffffff;
 			a {
 				color: #ffffff;
+				text-decoration: none;
 			}
+		}
+
+		h4 a {
+			text-decoration: none;
+			color: #ffffff;
 		}
 	}
 }
