*7691* introduce new sprites for merging users grid (from Chris)

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -189,6 +189,9 @@ a.sprite {
 
 	&.manage:before { margin-right:4px; background-position: -1512px 0; }
 	&.manage:hover:before { background-position: -1512px -24px; }
+
+	&.merge_users:before { margin-right:4px; background-position: -312px 0; }
+        &.merge_users:hover:before { background-position: -312px -24px; }
 	
 }
 
@@ -236,5 +239,6 @@ a.sprite {
 	&.modal_settings { background-position: -672px -48px; }
 	&.modal_warning { background-position: -720px -48px; }
 	&.modal_upgrade { background-position: -768px -48px; }
+	&.modal_merge_users { background-position: -816px -48px; }
 	&.modal_wizard { background-position: -1632px -48px; }
 }
