*7730* CSS fixes related to new category rows

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -73,7 +73,7 @@ div.pkp_controllers_grid {
 		display: table-row;
 	}
 	
-	td.no_border {
+	tr.no_border, td.no_border {
 		border: none !important;
 	}
 	
@@ -186,6 +186,10 @@ div.pkp_controllers_grid {
 		padding-top: 5px; 
 		line-height: 25px;
 		height: 25px;
+	}
+	
+	.category_controls td {
+		padding-left: 9px;
 	}
 	
 	.row_controls td.indent_row {
