--- a/pkp-lib/styles/controllers/grid/icons.less
+++ b/pkp-lib/styles/controllers/grid/icons.less
@@ -14,8 +14,12 @@
 }
 
 
-a.new, a.unfinished, a.reviewReady {
+a.new, a.reviewReady {
 	background-image: url(../lib/pkp/templates/images/structure/grid_task.png);
+}
+
+a.unfinished {
+	background-image: url(../lib/pkp/templates/images/structure/grid_task_disabled.png);
 }
 
 a.accepted {
