*7732* add padding for grid labels that appear before actions

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -299,4 +299,10 @@ div.pkp_controllers_grid {
 	tbody.ui-sortable-helper {
 		display:table;
 	}
+	
+	.gridCellContainer {
+		.gridLabelBeforeActions {
+			margin-right: 20px;
+		}
+	}
 }
