--- a/pkp-lib/styles/controllers/extrasOnDemand.less
+++ b/pkp-lib/styles/controllers/extrasOnDemand.less
@@ -12,15 +12,19 @@
  *
  * @brief Styles for pkp_controllers_extrasOnDemand
  */
- 
- .pkp_controllers_extrasOnDemand {
+
+.pkp_controllers_extrasOnDemand {
 	.ui-icon {
- 		float:left;
- 	}
- 	.toggleExtras {
- 		margin-top:15px;
- 		margin-bottom:15px;
- 		cursor:pointer;
- 		float:left;
- 	}
- }
+		float:left;
+	}
+	.toggleExtras {
+		margin-top:15px;
+		margin-bottom:15px;
+		cursor:pointer;
+		float:left;
+		/* The following allows us to
+		   implement a graceful fallback in case
+		   JS is disabled. */
+		display: none;
+	}
+}
