--- a/ops/styles/index.less
+++ b/ops/styles/index.less
@@ -45,6 +45,7 @@
 
 /* Controllers */
 @import url("styles/controllers/index.less");
+@import url("lib/pkp/styles/controllers/extrasOnDemand.less");
 
 /* Styles specific to template subfolders. */
 @import url("styles/common.less");
