standardize grid description fonts with other help classes

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -93,6 +93,7 @@ div.pkp_controllers_grid {
 	}
 	
 	.grid_header .pkp_grid_description {
+		font-family: Arial, Helvetica, sans-serif;
 		padding:10px;
 	}
 	
