*7649* Introduced main content bottom padding

--- a/pkp-lib/styles/structure/body.less
+++ b/pkp-lib/styles/structure/body.less
@@ -121,6 +121,7 @@ body {
 	.pkp_structure_main {
 		*zoom: 1;
 		padding-top: 10px;
+		padding-bottom: 80px;
 		border-top: 1px dotted #999;
 		display: table-cell;
 		*display: block;
