--- a/ops/styles/compiled.css
+++ b/ops/styles/compiled.css
@@ -1,4 +1,264 @@
 .pkp_form li { list-style:none; }
+.composite-ui button { white-space:nowrap; }
+.browserChrome .composite-ui select, .browserChrome .composite-ui button, .browserSafari .composite-ui select, .browserSafari .composite-ui button { padding:2px; }
+.composite-ui>.ui-tabs {
+  margin-top:20px;
+  padding:0;
+  border:0 none;
+}
+.composite-ui>.ui-tabs ul.main-tabs {
+  background:none #fbfbf3;
+  border:0 none;
+  padding:0;
+}
+.composite-ui>.ui-tabs ul.main-tabs li.ui-tabs-selected a { color:#555555; }
+.composite-ui>.ui-tabs ul.main-tabs li.ui-tabs-selected {
+  padding-bottom:2px;
+  background:none #ced7e1;
+}
+.composite-ui>.ui-tabs ul.main-tabs a {
+  color:#cccccc;
+  font-size:1.5em;
+  padding:0.2em 1em;
+}
+.composite-ui>.ui-tabs div.main-tabs {
+  padding:0;
+  padding:0;
+}
+.composite-ui>.ui-tabs div.main-tabs>.canvas { height:100%; }
+.composite-ui div.canvas {
+  margin:0;
+  padding:0;
+  background-color:#efefef;
+  width:100%;
+}
+.composite-ui div.pane {
+  border:1px solid #b6c9d5;
+  background-color:#efefef;
+  height:100%;
+}
+.composite-ui div.pane div.wrapper { padding:30px; }
+.composite-ui .scrollable {
+  overflow-y:auto;
+  overflow-x:hidden;
+}
+.fullscreen {
+  display:block;
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:999;
+  margin:0;
+  padding:0;
+  background:inherit;
+  font-size:120%;
+}
+#fullScreenButton {
+  float:right;
+  margin-top:5px;
+}
+.composite-ui div.pane div.help-message {
+  margin:40px;
+  padding-left:30px;
+  background:transparent url("../lib/pkp/templates/images/icons/alert.gif") no-repeat;
+}
+.composite-ui div.canvas>div.text-pane {
+  background-color:#ced7e1;
+  padding:0 30px;
+}
+.composite-ui div.grid table { border:0 none; }
+.composite-ui div.grid th .options { margin:0; }
+.composite-ui div.grid th .options a { margin:0; }
+.composite-ui div.grid td { border-bottom:1px solid #b6c9d5; }
+.composite-ui div.grid .row_actions a, .composite-ui div.grid .options a {
+  text-decoration:none;
+  padding-right:5px;
+}
+.composite-ui div.two-pane table.pane_header {
+  width:100%;
+  border-collapse:collapse;
+}
+.composite-ui div.two-pane table.pane_header tr {
+  height:30px;
+  padding:4px 0;
+}
+.composite-ui div.two-pane table.pane_header th {
+  padding:0 4px;
+  background-color:#ced7e1;
+  color:#20538d;
+  vertical-align:middle;
+}
+.composite-ui div.two-pane>div.left-pane {
+  float:left;
+  width:25%;
+}
+.composite-ui div.two-pane>div.right-pane {
+  float:left;
+  position:relative;
+}
+.composite-ui div.two-pane>div.left-pane div.grid .scrollable {
+  position:relative;
+  zoom:1;
+}
+.composite-ui div.two-pane>div.left-pane div.grid div.row_container { background-color:#ffffff; }
+.composite-ui div.two-pane>div.left-pane div.grid div.clickable-row:hover, .composite-ui div.two-pane>div.left-pane div.grid div.clickable-row:hover div.row_file {
+  background-color:#b6c9d5;
+  cursor:pointer;
+}
+.composite-ui div.two-pane>div.left-pane div.grid tr.approved-citation .row_container {
+  border-left:3px solid #20538d;
+  padding-left:22px;
+}
+.composite-ui div.two-pane>div.left-pane div.grid tr.approved-citation .row_actions {
+  width:22px;
+  left:-3px;
+}
+.composite-ui div.two-pane>div.splitbarV {
+  float:left;
+  width:6px;
+  height:100%;
+  line-height:0;
+  font-size:0;
+  border:solid 0px;
+  background:#cbe1fb url(../lib/pkp/styles/splitter/ui-bg_pane.gif) 0% 50%;
+}
+.composite-ui div.two-pane>div.splitbarV.working, .composite-ui div.two-pane>div.splitbuttonV.working {
+  -moz-opacity:.50;
+  filter:alpha(opacity=50);
+  opacity:.50;
+}
+.composite-ui div.two-pane>div.right-pane div.wrapper {
+  position:absolute;
+  top:30px;
+  bottom:0;
+  left:0;
+  right:0;
+  padding-top:10px;
+  padding-bottom:10px;
+}
+.composite-ui div.two-pane>div.right-pane div.wrapper.with-pane-actions {
+  bottom:60px;
+  padding-bottom:0;
+}
+.composite-ui div.two-pane>div.right-pane div.pane-actions {
+  position:absolute;
+  margin:0px;
+  bottom:0;
+  height:40px;
+  width:100%;
+}
+.composite-ui div.two-pane>div.right-pane div.pane-actions>div { padding:0 30px; }
+.composite-ui div.two-pane>div.right-pane div.pane-actions button { float:right; }
+.composite-ui div.two-pane>div.right-pane div.pane-actions button.secondary-button { float:left; }
+.composite-ui div.two-pane>div.right-pane .form-block {
+  margin-bottom:40px;
+  clear:both;
+}
+.composite-ui div.two-pane>div.right-pane div.grid table {
+  border-top:1px solid #b6c9d5;
+  table-layout:fixed;
+}
+.composite-ui div.two-pane>div.right-pane div.grid td {
+  height:auto;
+  min-height:0;
+  line-height:1em;
+  text-align:left;
+}
+.composite-ui div.two-pane>div.right-pane div.grid .row_actions {
+  height:auto;
+  min-height:0;
+  line-height:1em;
+  text-align:left;
+  right:26px;
+  padding-top:2px;
+}
+.composite-ui div.two-pane>div.right-pane div.grid .row_file {
+  height:auto;
+  min-height:0;
+  line-height:1em;
+  text-align:left;
+  width:auto;
+  padding:0;
+}
+.composite-ui div.two-pane>div.right-pane div.grid .row_container {
+  background-color:#ffffff;
+  padding-right:30px;
+  padding-right:5px;
+}
+.composite-ui div.two-pane>div.right-pane div.grid .row_actions a {
+  display:block;
+  padding-bottom:4px;
+}
+#citationEditor.composite-ui div.main-tabs { height:600px; }
+#citationEditor.composite-ui div.two-pane>div.left-pane div.grid .scrollable { height:570px; }
+.composite-ui div.two-pane>div.left-pane div.grid tr.current-item div.row_file, .composite-ui div.two-pane>div.left-pane div.grid tr.current-item div.row_container { background-color:#b6c9d5; }
+#editCitationForm .actions { float:right; }
+#editCitationForm .options-head .ui-icon { float:left; }
+#editCitationForm .option-block { margin-bottom:10px; }
+#editCitationForm .option-block p { margin:5px 0 0 0; }
+#editCitationForm .option-block-option {
+  float:left;
+  margin-left:5px;
+}
+#editCitationForm .clear { clear:both; }
+#citationEditor.composite-ui div.two-pane>div.right-pane .citation-comparison { margin-bottom:10px; }
+#citationEditor.composite-ui div.two-pane>div.right-pane .citation-comparison div.value {
+  border:1px solid #aaaaaa;
+  padding:5px;
+  background-color:#ffffff;
+}
+#editableRawCitation div.value { margin-right:15px; }
+#editableRawCitation div.value>div { padding-right:14px; }
+#editableRawCitation textarea.textarea {
+  width:100%;
+  padding:5px;
+  overflow-y:auto;
+  font-size:1.3em;
+}
+#rawCitationEditingExpertOptions .option-block { padding-left:30px; }
+#rawCitationWithMarkup div.value { margin-right:25px; }
+#rawCitationWithMarkup a {
+  display:block;
+  width:14px;
+  height:14px;
+  margin-top:1em;
+  margin-left:0;
+}
+#generatedCitationWithMarkup span { cursor:default; }
+#citationEditor.composite-ui div.two-pane>div.right-pane .citation-comparison span { font-size:1.3em; }
+#citationEditor.composite-ui div.two-pane>div.right-pane .citation-comparison-deletion {
+  color:red;
+  text-decoration:line-through;
+}
+#citationEditor.composite-ui div.two-pane>div.right-pane .citation-comparison-addition {
+  color:green;
+  text-decoration:underline;
+}
+#citationFormErrorsAndComparison .throbber { height:150px; }
+.composite-ui div.two-pane>div.right-pane div.grid td.first_column { width:150px; }
+.composite-ui div.two-pane>div.right-pane div.grid td.first_column select { width:100%; }
+#authorQueryResult { float:left; }
+#citationImprovementResultsBlock .options-head.active { margin-top:40px; }
+#citationImprovementResultsBlock div.grid td {
+  font-size:1em;
+  line-height:1.3em;
+}
+#citationImprovementResultsBlock div.grid td.citation-source-action-cell { text-align:right; }
+#citationImprovementResultsBlock div.grid tr.citation-source-action-row td {
+  border-bottom:0 none;
+  text-align:right;
+  padding-right:0;
+}
+#citationEditorExportPane { position:relative; }
+#citationEditorExportPane .scrollable {
+  position:absolute;
+  top:11em;
+  bottom:30px;
+  left:30px;
+  right:30px;
+}
 .pkp_helpers_invisible { visibility:hidden; }
 .pkp_helpers_display_none { display:none !important; }
 .pkp_helpers_clear { clear:both; }
