*7542* OJS/OMP Styling compatibility

--- a/pkp-lib/styles/form/form.less
+++ b/pkp-lib/styles/form/form.less
@@ -13,6 +13,27 @@
  * @brief Form Builder Vocabulary classes
  */
 
+/**
+ * The following styles are moved outside pkp_form until all forms are
+ * refactored/made compatible with the FBV styles.
+ */
+.error {
+	color: #900;
+}
+
+span.pkp_form_error {
+	color: #900;
+	font-weight: bold;
+	font-size: 1em;
+}
+
+.pkp_form_error_list a {
+	color: #900;
+}
+
+/**
+ * FBV styles
+ */
 .pkp_form {
 	.pkp_formArea {
 		p {
@@ -54,20 +75,6 @@
 		padding: 3px 0 3px 0;
 	}
 
-
-	.error {
-		color: #900;
-	}
-
-	span.pkp_form_error {
-		color: #900;
-		font-weight: bold;
-		font-size: 1em;
-	}
-
- 	.pkp_form_error_list a {
- 		color: #900;
- 	}
 
  	span.pkp_form_success {
  		color: #090;
