[OJS.de lucene - part II - ap3] Alternative spelling suggestions: implementation and tests.

--- a/ojs/plugins/generic/lucene/templates/lucene.css
+++ b/ojs/plugins/generic/lucene/templates/lucene.css
@@ -7,6 +7,12 @@
  * Special stylesheet for Lucene search result formatting.
  */
 
-#lucenePreResults {
-	text-align: right
+.plugins_generic_lucene_preResults {
+	width: 100%;
+	margin: 0 0 0.5em 0.5em;
+	line-height: 2em;
+}
+
+.plugins_generic_lucene_preResults_ordering {
+	float: right;
 }
