--- a/pkp-lib/styles/themes/default/theme.css
+++ b/pkp-lib/styles/themes/default/theme.css
@@ -64,7 +64,7 @@ h1 a {
 
 h2, .h2 {
 	color: #555;
-	font-family: Georgia;
+	font-family: Georgia,'Times New Roman',Times,serif;
 }
 
 h3, .h3 {
@@ -126,6 +126,10 @@ a.task:hover {
 /* @group jQuery UI */
 
 /* General */
+
+.ui-widget { font-family: Arial, Helvetica, sans-serif; }
+
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Arial, Helvetica, sans-serif; }
 
 .ui-widget-content a {
 	color: #569bbe;
