*7725* More fonts standardizing

--- a/pkp-lib/styles/structure/navigation.less
+++ b/pkp-lib/styles/structure/navigation.less
@@ -14,9 +14,8 @@
 
 .pkp_structure_head_siteNav {
 	border-bottom: 1px solid;
-	font-size: 90%;
 	color: #fff;
-	height: 3.7em;
+	height: 3.5em;
 	width: 100%;
 
 	.pkp_form div.section {
@@ -37,7 +36,8 @@
 
 .pkp_structure_head_localNav {
 	text-transform: uppercase;
-	font: 150% "Courier New", Courier, mono;
+	font-size: 20px;
+	font-family: "Courier New", Courier, mono;
 }
 
 .pkp_structure_head_localNav {
