--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -10,14 +10,17 @@
  */
 
 a.sprite {
+	line-height: 24px;
+	
 	&.pkp_common_disabled:before {
 		cursor: default;
 	}
 	&:before {
 		content: " ";
+		display: inline-block;
+		vertical-align: middle;
 		width: 24px;
 		height: 24px;
-		float: left;
 		background: url(../lib/pkp/templates/images/structure/sprites.png);
 		background-repeat: no-repeat;
 		cursor: pointer;
@@ -43,7 +46,7 @@ a.sprite {
 	&.information:before { background-position: -194px 0; }
 	&.information:hover:before { background-position: -194px -24px; }
 
-	&.more_info:before { background-position: -456px 0; }
+	&.more_info:before { margin-right:4px; background-position: -456px 0; }
 	&.more_info:hover:before { background-position: -456px -24px; }
 
 	&.disable:before { background-position: -432px 0; }
