*7667* Made grid below link actions smaller 1px

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -218,6 +218,10 @@ div.pkp_controllers_grid {
 		background-repeat: no-repeat;
 		margin: 0;
 	}
+	
+	.grid_link_actions_below a {
+		font-size: 11px;
+	}
 
 	/* Below was taken from the theme */
 
