*7725* Revert font changes for OJS 2.4.0

--- a/pkp-lib/styles/form/form.less
+++ b/pkp-lib/styles/form/form.less
@@ -60,7 +60,7 @@ span.pkp_form_error {
 	}
 
 	legend {
-		font-size: 115%;
+		font-size: 110%;
 		padding: 10px 0 10px 0;
 	}
 
@@ -80,10 +80,11 @@ span.pkp_form_error {
  	span.pkp_form_success {
  		color: #090;
  		font-weight: bold;
+ 		font-size: 1em;
  	}
 
 	span label.sub_label {
-		font-size: 85%;
+		font-size: 80%;
 		color: #999;
 		font-weight: normal;
 		padding: 2px 0 4px 0;
@@ -95,6 +96,7 @@ span.pkp_form_error {
 			outline: none;
 		}
 
+		font-size: 90%;
 		width: 99%;
 		border: 1px solid #ccc;
 		padding: 2px;
@@ -257,6 +259,7 @@ span.pkp_form_error {
 
 		.pkp_form_fakeFile {
 			left:0;
+			line-height:90%;
 			margin:0;
 			padding:0;
 			position:absolute;
@@ -274,7 +277,12 @@ span.pkp_form_error {
 			width:241px;
 		}
 
+		.pkp_form_fakeButton {
+			line-height:90%;
+		}
+
 		.pkp_form_uploadFile {
+			line-height: 90%;
 			height: 29px;
 		}
 	}
