--- a/pkp-lib/styles/structure/body.less
+++ b/pkp-lib/styles/structure/body.less
@@ -61,22 +61,22 @@ ol h1,ol h2,ol h3, ol h4, ol h5, ol h6, ol p, ol ul, ol ol, ol dl {
 }
 
 h1, .h1 {
-	font-size: 24px;
+	font-size: 196%;
 	@pkp_structure_body_normal_font;
 }
 
 h2, .h2 {
-	font-size: 22px;
+	font-size: 167%;
 	@pkp_structure_body_normal_font;
 }
 
 h3, .h3 {
-	font-size: 16px;
+	font-size: 120%;
 	@pkp_structure_body_normal_font;
 }
 
 h4, .h4 {
-	font-size: 14px;
+	font-size: 105%;
 	@pkp_structure_body_normal_font;
 }
 
