--- a/pkp-lib/styles/common.css
+++ b/pkp-lib/styles/common.css
@@ -17,7 +17,7 @@ body {
 	padding: 0;
 	background-color: #FBFBF3;
 	color: #111;
-	font-family: Arial,Helvetica,sans-serif;
+	font-family: Verdana,Arial,Helvetica,sans-serif;
 	text-align: center;
 }
 
@@ -66,7 +66,7 @@ label.error {
 input.textField, select.selectMenu, textarea.textArea, input.uploadField {
 	background-color: #F0F0E8;
 	color: #000;
-	font-family: Arial,Helvetica,sans-serif;
+	font-family: Verdana,Arial,Helvetica,sans-serif;
 	border-top: 2px solid #666;
 	border-left: 2px solid #666;
 	border-bottom: 2px solid #E8E8E1;
