--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -120,6 +120,10 @@ div.pkp_controllers_grid {
 		vertical-align: middle;
 	}
 
+	.options a {
+		font-size: 90%;
+	}
+
 	.options a:before {
 		margin-left: 20px;
 	}
@@ -197,6 +201,7 @@ div.pkp_controllers_grid {
 		margin-right: 20px;
 		text-decoration: none;
 		color: #777;
+		font-size: 90%;
 	}
 	
 	
