--- a/pkp-lib/styles/structure/navigation.less
+++ b/pkp-lib/styles/structure/navigation.less
@@ -14,8 +14,9 @@
 
 .pkp_structure_head_siteNav {
 	border-bottom: 1px solid;
+	font-size: 90%;
 	color: #fff;
-	height: 3.5em;
+	height: 3.7em;
 	width: 100%;
 
 	.pkp_form div.section {
@@ -36,8 +37,7 @@
 
 .pkp_structure_head_localNav {
 	text-transform: uppercase;
-	font-size: 20px;
-	font-family: "Courier New", Courier, mono;
+	font: 150% "Courier New", Courier, mono;
 }
 
 .pkp_structure_head_localNav {
