--- a/pkp-lib/styles/structure/sidebar.less
+++ b/pkp-lib/styles/structure/sidebar.less
@@ -33,8 +33,7 @@
 			display:list-item;
 			list-style: disc inside;
 			color: #569BBE;
-			font-size: 16px;
-			font-family: "Courier New",Courier,mono;
+			font: 120% "Courier New",Courier,mono;
 			text-transform: uppercase;
 			color: #569bbe;
 		}
