--- a/pkp-lib/styles/themes/default/theme.css
+++ b/pkp-lib/styles/themes/default/theme.css
@@ -43,13 +43,7 @@
 /* @group Content Overrides */
 
 body {
-	font-size: 12px;
-	font-family: Arial, Helvetica, sans-serif;
 	color: #333;
-}
-
-p {
-	line-height: 18px;
 }
 
 a {
@@ -70,7 +64,7 @@ h1 a {
 
 h2, .h2 {
 	color: #555;
-	font-family: Georgia,'Times New Roman',Times,serif;
+	font-family: Georgia;
 }
 
 h3, .h3 {
@@ -133,10 +127,6 @@ a.task:hover {
 
 /* General */
 
-.ui-widget { font-family: Arial, Helvetica, sans-serif; }
-
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Arial, Helvetica, sans-serif; }
-
 .ui-widget-content a {
 	color: #569bbe;
 }
@@ -156,11 +146,8 @@ a.task:hover {
 	-webkit-border-radius: 0px;
 }
 
-.ui-widget,
-.ui-widget .ui-widget,
 .ui-widget-content {
-	/*line-height: 18px;*/
-	font-size: 12px;
+	font-size: 100%;
 }
 
 /* Accordian */
@@ -177,17 +164,17 @@ a.task:hover {
 	color: #569bbe;
 	background: none !important;
 	text-transform: uppercase;
+	font: 100% "Courier New", Courier, mono;
+	font-weight: normal !important;
+
 }
 
-.ui-accordion .ui-accordion-header a {
-	font-weight: normal !important;
-	font: 12px "Courier New", Courier, mono !important;
+.ui-accordion-content {
+	font-size: 100%;
 }
 
 .ui-accordion-content-active {
 	border-bottom: 1px dotted #999;
-	background-image: none;
- 	background-color: transparent;
 }
 
 /* Tabs */
@@ -231,10 +218,6 @@ a.task:hover {
 .ui-tabs-nav .ui-state-active a {
 	margin-top: 1px;
 	margin-bottom: -1px;
-}
-
-.ui-tabs-nav a {
-	font-size: 12px;	
 }
 
 /* Button */
