--- a/ojs/styles/compiled.css
+++ b/ojs/styles/compiled.css
@@ -343,12 +343,14 @@ div.plupload div.plupload_header { display:none; }
   margin-top:5%;
 }
 .deprecated_selectHeader { margin-top:10px; }
+a.sprite { line-height:24px; }
 a.sprite.pkp_common_disabled:before { cursor:default; }
 a.sprite:before {
   content:" ";
+  display:inline-block;
+  vertical-align:middle;
   width:24px;
   height:24px;
-  float:left;
   background:url(../lib/pkp/templates/images/structure/sprites.png);
   background-repeat:no-repeat;
   cursor:pointer;
@@ -373,7 +375,10 @@ a.sprite.upgrade:before { background-position:-168px 0; }
 a.sprite.upgrade:hover:before { background-position:-168px -24px; }
 a.sprite.information:before { background-position:-194px 0; }
 a.sprite.information:hover:before { background-position:-194px -24px; }
-a.sprite.more_info:before { background-position:-456px 0; }
+a.sprite.more_info:before {
+  margin-right:4px;
+  background-position:-456px 0;
+}
 a.sprite.more_info:hover:before { background-position:-456px -24px; }
 a.sprite.disable:before { background-position:-432px 0; }
 a.sprite.disable:hover:before { background-position:-432px -24px; }
@@ -445,11 +450,11 @@ a.sprite.resubmit:before {
 }
 a.sprite.resubmit:hover:before { background-position:-720px -24px; }
 a.sprite.add_item_small:before {
-  height:15px;
+  height:14px;
   margin-right:4px;
-  background-position:-744px -4px;
+  background-position:-744px -5px;
 }
-a.sprite.add_item_small:hover:before { background-position:-744px -28px; }
+a.sprite.add_item_small:hover:before { background-position:-744px -29px; }
 a.sprite.enroll_user:before {
   margin-right:4px;
   background-position:-768px 0;
@@ -771,6 +776,7 @@ span.pkp_form_error {
 .pkp_form div.section {
   clear:left;
   margin-bottom:10px;
+  overflow:hidden;
 }
 .pkp_form label {
   display:block;
@@ -808,11 +814,11 @@ span.pkp_form_error {
 .pkp_form select {
   font-size:90%;
   width:99%;
+  width:100%;
   border:1px solid #cccccc;
   padding:2px;
   padding:3px;
   margin-top:4px;
-  margin-bottom:8px;
 }
 .pkp_form select:focus { outline:none; }
 .pkp_form .short { height:6em; }
@@ -826,7 +832,7 @@ span.pkp_form_error {
 .pkp_form .inline {
   float:left;
   clear:none !important;
-  margin-right:2%;
+  padding-right:2%;
   margin-bottom:0;
 }
 .pkp_form ul.checkbox_and_radiobutton {
@@ -1096,10 +1102,7 @@ div.pkp_controllers_grid .row_file {
   line-height:24px;
   margin-top:0.5em;
 }
-div.pkp_controllers_grid .row_file a.pkp_controllers_linkAction {
-  float:left;
-  margin-right:20px;
-}
+div.pkp_controllers_grid .row_file a.pkp_controllers_linkAction { margin-right:20px; }
 div.pkp_controllers_grid .multiline {
   line-height:125%;
   line-height:inherit;
@@ -1132,6 +1135,7 @@ div.pkp_controllers_grid a.task {
   background-repeat:no-repeat;
   margin:0;
 }
+div.pkp_controllers_grid .grid_link_actions_below a { font-size:11px; }
 div.pkp_controllers_grid tr.alternate_row, div.pkp_controllers_grid tr.alternate_row .row_file { background-color:#f5f5f5; }
 div.pkp_controllers_grid th { color:#20538d; }
 div.pkp_controllers_grid a.task:hover { background-color:#efefef; }
