--- a/pkp-lib/styles/structure/navigation.less
+++ b/pkp-lib/styles/structure/navigation.less
@@ -16,7 +16,7 @@
 	border-bottom: 1px solid;
 	font-size: 90%;
 	color: #fff;
-	height: 3.7em;
+	height: 44px;
 	width: 100%;
 
 	.pkp_form div.section {
@@ -24,20 +24,17 @@
 	}
 	
 	.pkp_helpers_flatlist {
-		margin-top: 10px;
+		margin-top: 15px;
 	}
 
 	li {
 		padding-left: 20px;
 	}
 
-	li.profile {}
+	#pressSwitcher {
+		margin-top: -8px;
+	}
 
-}
-
-.pkp_structure_head_localNav {
-	text-transform: uppercase;
-	font: 150% "Courier New", Courier, mono;
 }
 
 .pkp_structure_head_localNav {
