--- a/pkp-lib/styles/themes/default/theme.css
+++ b/pkp-lib/styles/themes/default/theme.css
@@ -26,6 +26,11 @@
 	min-height: 400px;
 }
 
+.pkp_structure_head_localNav {
+	text-transform: uppercase;
+	font: 170% "Courier New", Courier, mono;
+}
+
 .pkp_structure_footer {
 	background-color: #c1bbaf;
 }
@@ -44,6 +49,8 @@
 
 body {
 	color: #333;
+	font-family: Arial,Helvetica,sans-serif;
+	font-size: 12px;
 }
 
 a {
@@ -77,6 +84,10 @@ h4, .h4 {
 	color: #555;
 	text-transform: uppercase;
 	font-family: "Courier New", Courier, mono;
+}
+
+p {
+	line-height: 18px;
 }
 
 .pkp_structure_head_siteNav a {
@@ -144,10 +155,6 @@ a.task:hover {
 	border-radius: 0px;
 	-moz-border-radius: 0px;
 	-webkit-border-radius: 0px;
-}
-
-.ui-widget-content {
-	font-size: 100%;
 }
 
 /* Accordian */
