*7725* General style clean-up, fixed help text line height

--- a/pkp-lib/styles/index.less
+++ b/pkp-lib/styles/index.less
@@ -83,8 +83,13 @@
 	vertical-align: middle;
 	padding-bottom: 10px;
 }
+
 .action_links a {
 	font-size: 90%;
 	margin-right: 20px;
 	float: left;
+}
+
+.pkp_help {
+	line-height: 14px;
 }
