--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -95,6 +95,20 @@ div.pkp_controllers_grid {
 	.grid_header .pkp_grid_description {
 		font-family: Arial, Helvetica, sans-serif;
 		padding:10px;
+		color:#999;
+		font-weight:normal;
+		font-size:80%;
+		line-height: 14px;
+	}
+	
+	.grid_header .pkp_grid_title {
+		color: #222;
+		text-transform:none;
+		font-weight:bold;
+		font-family:Arial,Helvetica,sans-serif;
+		font-size:110%;
+		padding-left:0px;
+		padding-bottom:5px;
 	}
 	
 	.grid_header_bar {
