--- a/pkp-lib/styles/form/form.less
+++ b/pkp-lib/styles/form/form.less
@@ -67,7 +67,12 @@ span.pkp_form_error {
 	div.section {
 		clear: left;
 		margin-bottom: 10px;
-		overflow: hidden;
+	}
+	
+	div.section:after {
+		clear: both;
+		content: "";
+		display: block;
 	}
 
 	label {
