*7725* Adopt % for relative font sizes

--- a/pkp-lib/styles/form/form.less
+++ b/pkp-lib/styles/form/form.less
@@ -24,7 +24,7 @@
 span.pkp_form_error {
 	color: #900;
 	font-weight: bold;
-	font-size: 1em;
+	font-size: 100%;
 }
 
 .pkp_form_error_list a {
@@ -85,7 +85,7 @@ span.pkp_form_error {
  	span.pkp_form_success {
  		color: #090;
  		font-weight: bold;
- 		font-size: 1em;
+ 		font-size: 100%;
  	}
 
 	span label.sub_label {
