*7798* introduce new editorial decision modal icons

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -243,5 +243,8 @@ a.sprite {
 	&.modal_warning { background-position: -720px -48px; }
 	&.modal_upgrade { background-position: -768px -48px; }
 	&.modal_merge_users { background-position: -816px -48px; }
+	&.modal_send_to_production { background-position: -864px -48px; }
+	&.modal_approve_file { background-position: -912px -48px; }
+	&.modal_review { background-position: -960px -48px; }
 	&.modal_wizard { background-position: -1632px -48px; }
 }
