*7730* Introduced modal approve icon style

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -235,6 +235,7 @@
 	&.modal_email { background-position: -336px -48px; }
 	&.modal_delete { background-position: -384px -48px; }
 	&.modal_approve_proofs { background-position: -432px -48px; }
+	&.modal_approve { background-position: -432px -48px; }
 	&.modal_edit { background-position: -480px -48px; }
 	&.modal_confirm { background-position: -528px -48px; }
 	&.modal_add_item { background-position: -576px -48px; }
