*7650* Added new sprite for OA

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -193,8 +193,11 @@
 	&.manage:before { margin-right:4px; background-position: -1512px 0; }
 	&.manage:hover:before { background-position: -1512px -24px; }
 
+	&.openaccess:before { margin-right:4px; background-position: -1536px 0; }
+	&.openaccess:before { background-position: -1536px -24px; }
+
 	&.merge_users:before { margin-right:4px; background-position: -312px 0; }
-        &.merge_users:hover:before { background-position: -312px -24px; }
+	&.merge_users:hover:before { background-position: -312px -24px; }
 	
 }
 
@@ -247,5 +250,11 @@
 	&.modal_send_to_production { background-position: -864px -48px; }
 	&.modal_approve_file { background-position: -912px -48px; }
 	&.modal_review { background-position: -960px -48px; }
+	&.accept_submission { background-position: -912px -48px; }
+	&.decline_submission { background-position: -1008px -48px; }
+	&.please_resubmit { background-position: -1056px -48px; }
+	&.revisions_required { background-position: -1104px -48px; }
+	&.review_reminder { background-position: -1152px -48px; }
+	&.openaccess { background-position: -1200px -48px; }
 	&.modal_wizard { background-position: -1632px -48px; }
 }
