*7650* Fixed hover for OA icon

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -194,7 +194,7 @@
 	&.manage:hover:before { background-position: -1512px -24px; }
 
 	&.openaccess:before { margin-right:4px; background-position: -1536px 0; }
-	&.openaccess:before { background-position: -1536px -24px; }
+	&.openaccess:hover:before { background-position: -1536px -24px; }
 
 	&.merge_users:before { margin-right:4px; background-position: -312px 0; }
 	&.merge_users:hover:before { background-position: -312px -24px; }
