*7795* adding title help styles

--- a/pkp-lib/styles/helpers.less
+++ b/pkp-lib/styles/helpers.less
@@ -124,6 +124,11 @@
 	padding:10px;
 }
 
+.pkp_help_title {
+	text-transform: uppercase;
+	font-family: "Courier New", Courier, mono;
+}
+
 .pkp_helpers_black_bg {
 	background-color: black;
 }
