--- a/ojs/styles/index.less
+++ b/ojs/styles/index.less
@@ -46,5 +46,5 @@
 /* Controllers */
 @import url("styles/controllers/index.less");
 
-
 /* Styles specific to template subfolders. */
+@import url("styles/common.less");
