[OJS.de lucene - part II - ap7] Faceting: Specification, implementation and test.

--- a/ojs/plugins/generic/lucene/templates/lucene.css
+++ b/ojs/plugins/generic/lucene/templates/lucene.css
@@ -25,3 +25,8 @@ tr.plugins_generic_lucene_highlighting td {
 	font-style: normal;
 	font-weight: bold;
 }
+
+.plugins_generic_lucene_facets .pkp_controllers_extrasOnDemand .toggleExtras {
+	margin-top: 5px;
+	margin-bottom: 0;
+}
