*6434* Implemented items per page grid level setting

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -311,4 +311,9 @@ div.pkp_controllers_grid {
 			margin-right: 20px;
 		}
 	}
+	
+	div.gridPaging select.itemsPerPage {
+		width: auto;
+		margin-left: 5px;
+	}
 }
